# OGRENGINE

./: .gitignore  CMakeLists.txt  OGRENGINE.sln  README.md
OGRENGINE/: Application.cpp  Application.h  Compositor.cpp  Compositor.h  Material.cpp  Material.h  OGRENGINE.cpp  OGRENGINE.vcxproj  OGRENGINE.vcxproj.filters  ReadMe.txt  RenderSystemLoader.cpp  ResourceLoader.cpp  ViewportListener.cpp  ViewportListener.h  stdafx.cpp
config/: plugins.cfg  plugins_d.cfg  resources.cfg  resources_d.cfg
include/: Application.h  Application.hpp  RenderSystemLoader.h  RenderSystemManager.hpp  ResourceLoader.h  ResourceManager.hpp  RootManager.hpp
libs/Debug/include/: ogreentity.h
libs/Debug/lib/: OgreBites_d.lib  OgreHLMS_d.lib  OgreMeshLodGenerator_d.lib  OgreOverlay_d.lib  OgrePaging_d.lib  OgreProperty_d.lib  OgreRTShaderSystem_d.lib  OgreTerrain_d.lib  OgreVolume_d.lib
libs/Debug/lib/OGRE/: Plugin_BSPSceneManager_d.lib  Plugin_OctreeSceneManager_d.lib  Plugin_OctreeZone_d.lib  Plugin_PCZSceneManager_d.lib  Plugin_ParticleFX_d.lib  RenderSystem_Direct3D11_d.lib  RenderSystem_GL3Plus_d.lib  RenderSystem_GL_d.lib
libs/Debug/lib/OGRE/Samples/: Sample_BSP_d.lib  Sample_BezierPatch_d.lib  Sample_CameraTrack_d.lib  Sample_CelShading_d.lib  Sample_Character_d.lib  Sample_Compositor_d.lib  Sample_Compute_d.lib  Sample_CubeMapping_d.lib  Sample_DeferredShading_d.lib  Sample_Dot3Bump_d.lib  Sample_DualQuaternion_d.lib  Sample_DynTex_d.lib  Sample_EndlessWorld_d.lib  Sample_FacialAnimation_d.lib  Sample_Fresnel_d.lib  Sample_Grass_d.lib  Sample_HLMS_d.lib  Sample_Instancing_d.lib  Sample_Isosurf_d.lib  Sample_Lighting_d.lib  Sample_MeshLod_d.lib  Sample_NewInstancing_d.lib  Sample_Ocean_d.lib  Sample_PNTriangles_d.lib  Sample_ParticleFX_d.lib  Sample_ParticleGS_d.lib  Sample_SSAO_d.lib  Sample_ShaderSystemMultiLight_d.lib  Sample_ShaderSystemTexturedFog_d.lib  Sample_ShaderSystem_d.lib  Sample_Shadows_d.lib  Sample_SkeletalAnimation_d.lib  Sample_SkyBox_d.lib  Sample_SkyDome_d.lib  Sample_SkyPlane_d.lib  Sample_Smoke_d.lib  Sample_SphereMapping_d.lib  Sample_Terrain_d.lib  Sample_Tessellation_d.lib  Sample_TextureArray_d.lib  (+6 more)
libs/Release/include/: OgreBuildSettings.h
libs/Release/lib/: OIS_static.lib  OgreBites.lib  OgreGLSupport.lib  OgreHLMS.lib  OgreMeshLodGenerator.lib  OgreOverlay.lib  OgrePaging.lib  OgreProperty.lib  OgreRTShaderSystem.lib  OgreTerrain.lib  OgreVolume.lib
libs/Release/lib/OGRE/: Plugin_BSPSceneManager.lib  Plugin_OctreeSceneManager.lib  Plugin_OctreeZone.lib  Plugin_PCZSceneManager.lib  Plugin_ParticleFX.lib  RenderSystem_Direct3D11.lib  RenderSystem_GL.lib  RenderSystem_GL3Plus.lib
libs/Release/lib/OGRE/Samples/: Sample_BSP.lib  Sample_BezierPatch.lib  Sample_CameraTrack.lib  Sample_CelShading.lib  Sample_Character.lib  Sample_Compositor.lib  Sample_Compute.lib  Sample_CubeMapping.lib  Sample_DeferredShading.lib  Sample_Dot3Bump.lib  Sample_DualQuaternion.lib  Sample_DynTex.lib  (+34 more)
media/basic/materials/programs/: double_texture.program  double_texture_FS.glsl  double_texture_VS.glsl
media/basic/materials/scripts/: double_texture.material
media/manualCompositor/materials/programs/: script_compositor.program
media/manualCompositor/materials/scripts/: script_compositor.material
media/manualCompositorMultiTarget/materials/programs/: manual_compositor_multi_target.program  manual_compositor_multi_target_draw_FS.glsl  manual_compositor_multi_target_merge_FS.glsl  manual_material_multi_target.program
media/manualCompositorMultiTarget/materials/scripts/: manual_compositor_multi_target.material  manual_material_multi_target.material
media/materials/scripts/: OGRENGINE.material  doubleTexture_M.material
media/scriptCompositor/compositor/: script_compositor.compositor
media/scriptCompositor/materials/programs/: script_compositor_FS.glsl  script_compositor_VS.glsl
media/scriptCompositorMultiTarget/compositor/: script_compositor_multi_target.compositor
media/scriptCompositorMultiTarget/materials/programs/: script_compositor_multi_target.program  script_material_multi_target.program
media/scriptCompositorMultiTarget/materials/scripts/: script_compositor_multi_target.material  script_material_multi_target.material
media/scriptMaterial/materials/programs/: script_material.program  script_material_FS.glsl  script_material_VS.glsl
media/scriptMaterial/materials/scripts/: script_material.material
media/scriptMaterialMultiPass/materials/programs/: script_material_multi_pass.program  script_material_multi_pass_FS.glsl
media/scriptMaterialMultiPass/materials/scripts/: script_material_multi_pass.material
sample/basic/src/: Application.cpp
sample/manualCompositor/include/: Compositor.hpp  ManualCompositor.hpp
sample/manualCompositor/src/: Compositor.cpp  ManualCompositor.cpp  main.cpp
sample/manualCompositorMultiTarget/include/: ManualCompositorMultiTarget.hpp
sample/manualCompositorMultiTarget/src/: Compositor.cpp  ManualCompositorMultiTarget.cpp  main.cpp
sample/manualMaterial/: CMakeLists.txt
sample/manualMaterial/include/: Application.hpp  ManualMaterial.hpp  Material.hpp
sample/manualMaterial/src/: Application.cpp  ManualMaterial.cpp  Material.cpp  main.cpp
sample/manualMaterialMultiPass/include/: ManualMaterialMultiPass.hpp
sample/manualMaterialMultiPass/src/: ManualMaterialMultiPass.cpp  Material.cpp  main.cpp
sample/scriptCompositor/include/: ScriptCompositor.hpp
sample/scriptCompositor/src/: ScriptCompositor.cpp  main.cpp
sample/scriptCompositorMultiTarget/include/: ScriptCompositorMultiTarget.hpp
sample/scriptCompositorMultiTarget/src/: ScriptCompositorMultiTarget.cpp  main.cpp
sample/scriptMaterial/include/: Application.hpp  ScriptMaterial.hpp
sample/scriptMaterial/src/: Application.cpp  ScriptMaterial.cpp  main.cpp
sample/scriptMaterialMultiPass/include/: ScriptMaterialMultiPass.hpp
sample/scriptMaterialMultiPass/src/: ScriptMaterialMultiPass.cpp  main.cpp
src/: Application.cpp  OGRENGINE.cpp  RenderSystemLoader.cpp  RenderSystemManager.cpp  ResourceLoader.cpp  ResourceManager.cpp  RootManager.cpp
